[metadata]
name = Mopidy-Beep
version = 0.1.0
license = Apache License, Version 2.0
author = Hayri Bakici
author_email = hayri.bakici@gmail.com
description=Beep is a Mopidy extension which allows you to get audative feedback of the mopidy events
long_description = file: README.rst
license_file = LICENSE
classifiers=
    Environment :: No Input/Output (Daemon)
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Multimedia :: Sound/Audio :: Players

[options]
python_requires = >= 3.7
install_requires =
    Mopidy >= 3.0
    Pykka >= 2.0.1
    setuptools
zip_safe = False
include_package_data = True
packages = find:

[options.packages.find]
exclude =
    tests
    tests.*


[options.entry_points]
mopidy.ext =
    beep = mopidy_beep:Extension

[wheel]
universal = 1